--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ h1 {
     background-color: rgb(131, 0, 131);
     color: rgb(85, 6, 85);
     font-family: Futura, Trebuchet MS, Arial, sans-serif;
+    padding: 5%;
 }
 
 /* NAV STUFF */
