--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto');
+
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
+/* h1 {
+    margin: 3% 0%;
+}  */
+
 body {
     background: #E5E5E5;
 }
@@ -10,7 +20,7 @@ header {
 nav {
     text-align: center;
     background: #162c5c;
-    padding: 2px;
+    padding: 0.1px;
     color: black;
     font-size: 20px;
 }
@@ -41,7 +51,7 @@ header a:hover {
     color: black;
 }
 
-.socials {
+#socials {
     /* text-align: center; */
     width: 30%;
     color: #162c5c;
@@ -50,14 +60,32 @@ header a:hover {
     padding-top: 2%;
     padding-bottom: 2%;
     background: #FCA311;
+    float: left;
 }
 
-.socials a {
+#socials a {
     text-decoration: none;
     color: black;
 }
 
-.socials a:hover {
+#socials a:hover {
     text-decoration: none;
     color: black;
+}
+
+.aboutme {
+    background: #FCA311;
+    color: black;
+    padding: 2%;
+    margin: 21.44px 0px;
+}
+
+#school {
+    width: 45%;
+    float: left;
+}
+
+#freetime {
+    width: 45%;
+    float: right;
 }
