--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,10 @@ body {
     background: #E5E5E5;
 }
 
+.header {
+    position: fixed;
+}
+
 header {
     text-align: center;
     background: #FCA311;
@@ -52,15 +56,12 @@ header a:hover {
 }
 
 #socials {
-    /* text-align: center; */
     width: 30%;
     color: #162c5c;
-    padding-left: 5%;
-    padding-right: 5%;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    padding: 2% 5%;
     background: #FCA311;
     float: left;
+    clear: right;
 }
 
 #socials a {
@@ -88,4 +89,9 @@ header a:hover {
 #freetime {
     width: 45%;
     float: right;
+}
+
+footer {
+    margin: 20px 0px;
+    clear: both;
 }
