removing links to projecthub in prep to push to main and make live v2 of the website
also slight tweaks to footer style stuff
first mention that this is v2

--- a/style/style.css
+++ b/style/style.css
@@ -92,6 +92,9 @@ header a:hover {
 }
 
 footer {
+    background: #ccc;
+    color: #162c5c;
     margin: 20px 0px;
+    padding: 5px 10px;
     clear: both;
 }
