--- a/style/style.css
+++ b/style/style.css
@@ -56,12 +56,10 @@ header a:hover {
 }
 
 #socials {
-    width: 30%;
+    width: 40%;
     color: #162c5c;
     padding: 2% 5%;
     background: #FCA311;
-    float: left;
-    clear: right;
 }
 
 #socials a {
@@ -79,16 +77,7 @@ header a:hover {
     color: black;
     padding: 2%;
     margin: 21.44px 0px;
-}
-
-#school {
     width: 45%;
-    float: left;
-}
-
-#freetime {
-    width: 45%;
-    float: right;
 }
 
 footer {
@@ -96,5 +85,16 @@ footer {
     color: #162c5c;
     margin: 20px 0px;
     padding: 5px 10px;
+}
+
+.left {
+    float: left;
+}
+
+.right {
+    float: right;
+}
+
+.clear {
     clear: both;
 }
