added ass misc hub page to link all my ass misc together
updated various links and a colours, things sorta kinda work? and maybe look good too?

--- a/style/programmingstyle.css
+++ b/style/programmingstyle.css
@@ -4,6 +4,10 @@ p {
     color: black;
 }
 
+h2 {
+    color: #E5E5E5;
+}
+
 #listProjects {
     background: #FCA311;
     color: #162c5c;
@@ -14,12 +18,12 @@ p {
 
 #listProjects a:hover {
     text-decoration: none;
-    color: black;
+    color: #162c5c;
 }
 
 #listProjects a {
     text-decoration: none;
-    color: black;
+    color: #162c5c;
 }
 
 .container {
